# Cayley

./: .gitignore  CMakeLists.txt  README.md
docs/: QuickStartGuide.md
include/: array.hpp  array_priv.hpp  cayley.hpp  cayley_all.hpp  iterator.hpp  iterator_priv.hpp  static_matrix.hpp  utilities.hpp
include/internal/: cayley_static_2d_mat.hpp
tests/: array_tests.cpp  main.cpp  static_matrix_constructor_tests.cpp
